# ChangeLog for sys-fs/ddrescue
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-fs/ddrescue/ChangeLog,v 1.36 2012/05/03 09:38:49 xmw Exp $

  03 May 2012; Michael Weber <xmw@gentoo.org> ddrescue-1.15.ebuild:
  ppc stable (bug 413261)

  24 Apr 2012; Agostino Sarubbo <ago@gentoo.org> ddrescue-1.15.ebuild:
  Stable for amd64, wrt bug #413261

  24 Apr 2012; Jeff Horelick <jdhore@gentoo.org> ddrescue-1.15.ebuild:
  marked x86 per bug 413261

*ddrescue-1.15 (05 Mar 2012)

  05 Mar 2012; Lars Wendler <polynomial-c@gentoo.org> +ddrescue-1.15.ebuild:
  Version bump.

  08 Aug 2011; Lars Wendler <polynomial-c@gentoo.org> -ddrescue-1.12.ebuild,
  -ddrescue-1.13.ebuild:
  Removed old versions.

  26 Jul 2011; Markus Meier <maekke@gentoo.org> ddrescue-1.14.ebuild:
  x86 stable, bug #375501

  22 Jul 2011; Kacper Kowalik <xarthisius@gentoo.org> ddrescue-1.14.ebuild:
  ppc stable wrt #375501

  18 Jul 2011; Markos Chandras <hwoarang@gentoo.org> ddrescue-1.14.ebuild:
  Stable on amd64 wrt bug #375501

*ddrescue-1.14 (19 Jan 2011)

  19 Jan 2011; Lars Wendler <polynomial-c@gentoo.org> -ddrescue-1.11.ebuild,
  +ddrescue-1.14.ebuild:
  Version bump. Removed old.

  13 Jan 2011; Brent Baude <ranger@gentoo.org> ddrescue-1.12.ebuild:
  stable ppc, bug 343749

  03 Nov 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org> ddrescue-1.12.ebuild:
  x86 stable wrt bug #343749

  02 Nov 2010; Markos Chandras <hwoarang@gentoo.org> ddrescue-1.12.ebuild:
  Stable on amd64 wrt bug #343749

*ddrescue-1.13 (01 Nov 2010)

  01 Nov 2010; Lars Wendler <polynomial-c@gentoo.org> -ddrescue-1.9.ebuild,
  +ddrescue-1.13.ebuild, metadata.xml:
  Version bump. Added myself as maintainer.

*ddrescue-1.12 (06 May 2010)

  06 May 2010; Lars Wendler <polynomial-c@gentoo.org> +ddrescue-1.12.ebuild:
  version bump

  29 Mar 2010; Raúl Porcel <armin76@gentoo.org> ddrescue-1.11.ebuild:
  Add ~ia64 wrt #309331
