@@ -1,6 +1,11 @@
 # ChangeLog for sys-fs/ddrescue
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-fs/ddrescue/ChangeLog,v 1.36 2012/05/03 09:38:49 xmw Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-fs/ddrescue/ChangeLog,v 1.37 2012/05/03 12:20:24 xmw Exp $
+
+*ddrescue-1.15-r1 (03 May 2012)
+
+  03 May 2012; Michael Weber <xmw@gentoo.org> +ddrescue-1.15-r1.ebuild:
+  Revbump to improve Prefix support (bug 414457)
 
   03 May 2012; Michael Weber <xmw@gentoo.org> ddrescue-1.15.ebuild:
   ppc stable (bug 413261)
